# Chemistry

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Libraries/: AtomColors.h  Desenhos.h  General.h  Molecule.hpp
Shaders/: Atom.frag  Atom.vert  BaseShader.frag  BaseShader.vert
Sources/: Camera.cpp  Desenho.cpp  Molecule.cpp  Shader.cpp  texture.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
